# bare-blender

./: README.md
blender_2.03_tree/: .obj.Makefile  CMakeLists.txt  Makefile  release_log.txt
blender_2.03_tree/CVS/: Entries  Repository
blender_2.03_tree/avi/: CMakeLists.txt  Makefile  avi.c  avirgb.c  avirgb.h  codecs.c  endian.c  endian.h  jmf.c  jmf.h  mjpeg.c  mjpeg.h  options.c  rgb32.c  rgb32.h  so_locations
blender_2.03_tree/avi/CVS/: Entries  Repository
blender_2.03_tree/avi/avilib/CVS/: Repository
blender_2.03_tree/avi/old/: Makefile  Makefile.pc
blender_2.03_tree/avi/old/CVS/: Entries  Repository
blender_2.03_tree/datafiles/: .B.blend  .Bpib  CMakeLists.txt  blenderbuttons  datatoc.c  splash.blend  splash.jpg.c
blender_2.03_tree/datafiles/CVS/: Entries  Repository
blender_2.03_tree/docs/: nurbs.html
blender_2.03_tree/docs/CVS/: Entries  Repository
blender_2.03_tree/glut-beos/: Makefile  beos_x11.cpp  beos_x11.h  glutBlocker.cpp  glutBlocker.h  glutCallback.cpp  glutColor.cpp  glutCursor.cpp  glutCursors.h  glutDraw.cpp  glutDstr.cpp  glutEvent.cpp  glutGet.cpp  glutInit.cpp  glutMenu.cpp  glutMenu.h  glutOverlay.cpp  glutState.h  glutWindow.cpp  glutWindow.h  glut_8x13.cpp  glut_9x15.cpp  glut_bitmap.cpp  glut_bwidth.cpp  glut_hel10.cpp  glut_hel12.cpp  glut_hel18.cpp  glut_helb12.cpp  glut_helb8.cpp  glut_scr12.c  glut_sgib15.c  glut_shapes.cpp  glut_swidth.cpp  glut_teapot.cpp  glut_tr10.cpp  glut_tr24.cpp  glut_util.cpp  glutbitmap.h  glutint.h  glutstroke.h
blender_2.03_tree/glut-beos/CVS/: Entries  Repository
blender_2.03_tree/glut-win/: CMakeLists.txt  Makefile  capturexfont.c  glut_8x13.c  glut_bitmap.c  glut_blender.c  glut_bwidth.c  glut_cindex.c  glut_cmap.c  glut_cursor.c  glut_draw.c  glut_event.c  glut_ext.c  glut_fullscrn.c  glut_get.c  glut_hel10.c  glut_hel18.c  glut_helb14.c  glut_init.c  glut_menu.c  glut_overlay.c  glut_scr14.c  glut_shapes.c  glut_stroke.c  glut_swap.c  glut_swidth.c  glut_util.c  glut_vidresize.c  glut_warp.c  glut_win.c  glut_winmisc.c  glutbitmap.h  glutint.h  glutstroke.h  glutwin32.h  layerutil.h  win32_glx.c  win32_glx.h  win32_menu.c  win32_util.c  (+2 more)
blender_2.03_tree/glut-win/CVS/: Entries  Repository
blender_2.03_tree/glut-win/gl/: glut.h
blender_2.03_tree/glut-win/gl/CVS/: Entries  Repository
blender_2.03_tree/glut-x11/: Makefile  capturexfont  capturexfont.c  doormijveranderd.doc  glut_9x15.c  glut_bitmap.c  glut_bwidth.c  glut_cmap.c  glut_cursor.c  glut_draw.c  glut_dstr.c  glut_event.c  glut_font.c  glut_fullscrn.c  glut_get.c  glut_hel12.c  glut_helb10.c  glut_helb12.c  glut_init.c  glut_input.c  glut_menu.c  glut_mroman.c  glut_overlay.c  glut_roman.c  glut_scr15.c  glut_shapes.c  glut_stroke.c  glut_teapot.c  glut_tr10.c  glut_tr24.c  glut_warp.c  glut_win.c  glut_winmisc.c  glutbitmap.h  glutint.h  glutstroke.h  glutwin32.h
blender_2.03_tree/glut-x11/CVS/: Entries  Repository
blender_2.03_tree/glut-x11/fontbak/: glut_hel10.c  glut_hel12.c  glut_hel18.c  glut_helb10.c  glut_helb14.c  glut_helb8.c
blender_2.03_tree/glut-x11/fontbak/CVS/: Entries  Repository
blender_2.03_tree/imbuf/: CMakeLists.txt  Makefile  allocimbuf.c  amiga.c  anim.c  antialias.c  bitplanes.c  cdi.c  cmap.c  convert_arrays.h  cspace.c  data.c  delta.c  dither.c  divers.c  filter.c  filter.txt  ham.c  hamx.c  iff.c  imbuf.h  iris.c  izoom.c  jconfig.h  jmorecfg.h  jpeg.c  makecmap.c  matrix.h  matrix_oud.h  mdec_decode.c  new_hamx.c  readimage.c  rectop.c  rotate.c  scaling.c  targa.c  tiff.c  tim.c  troep.c  util.c  (+2 more)
blender_2.03_tree/imbuf/CVS/: Entries  Repository
blender_2.03_tree/imbuf/imbuflib/CVS/: Repository
blender_2.03_tree/imbuf/prog/: make_convert.c
blender_2.03_tree/imbuf/prog/CVS/: Entries  Repository
blender_2.03_tree/include/: Button.h  arithb_ext.h  avi.h  beosstuff.h  blendef.h  blender.h  config.h  datatoc.h  displist_ext.h  drawview_ext.h  edit.h  editlattice_ext.h  effect.h  effect_types.h  exports.h  file.h  floatpatch.h  game.h  glut.h  graphics.h  group.h  iff.h  ika.h  ika_ext.h  image_ext.h  imageprocess_ext.h  imasel.h  imbuf_extern.h  interface.h  ipo.h  ipo_ext.h  mydevice.h  mywindow_ext.h  objfnt.h  old_game.h  oops.h  packedFile.h  plugin.h  py_blender.h  radio.h  (+12 more)
blender_2.03_tree/include/CVS/: Entries  Repository
blender_2.03_tree/jpeg/: CMakeLists.txt  Makefile  config.status  jchuff.c  jcphuff.c  jpegtran
blender_2.03_tree/jpeg/CVS/: Entries  Repository
blender_2.03_tree/lib/Python/DLLs/: _tkinter.pyd  bsddb.pyd  parser.pyd  zlib.pyd
blender_2.03_tree/lib/Python/Doc/: index.html
blender_2.03_tree/lib/Python/Lib/: asynchat.py  asyncore.py  (+2 more)
blender_2.03_tree/makesdna/: CMakeLists.txt  Makefile  makesdna.c
blender_2.03_tree/makesdna/CVS/: Entries  Repository
blender_2.03_tree/misc/: CMakeLists.txt  Makefile  storage.c  util.c
blender_2.03_tree/misc/CVS/: Entries  Repository
blender_2.03_tree/plugins/: Makefile  bmake
blender_2.03_tree/plugins/CVS/: Entries  Repository
blender_2.03_tree/plugins/include/: floatpatch.h  iff.h  plugin.h  util.h
blender_2.03_tree/plugins/sequence/: blur.c  scatter.c  showlzbuf.c  showzbuf.c
blender_2.03_tree/plugins/texture/: Makefile  clouds2.c  tiles.c
blender_2.03_tree/render/: Makefile
blender_2.03_tree/render/CVS/: Entries  Repository
blender_2.03_tree/render/intern/: Makefile
blender_2.03_tree/sound/: Makefile
blender_2.03_tree/sound/CVS/: Entries  Repository
blender_2.03_tree/sound/intern/: Makefile
blender_2.03_tree/sound/test/: Makefile  testopenal.c
blender_2.03_tree/src/: .BCkey  .obj.Makefile  B.blend.c  Bfont.c  Bfs.c  Button.c  CMakeLists.txt  Makefile  Makefile.new  anim.c  arithb.c  arithbn.c  beosstuff.c  blender.c  blenderbuttons.c  buttons.c  cmap.tga.c  cmovie.tga.c  curve.c  displist.c  drawimage.c  drawimasel.c  drawipo.c  drawmesh.c  drawobject.c  drawoops.c  drawscene.c  drawseq.c  drawsound.c  drawtext.c  drawview.c  edit.c  editcurve.c  editface.c  editfont.c  editgroup.c  editika.c  editimasel.c  editipo.c  editkey.c  (+86 more)
blender_2.03_tree/src/CVS/: Entries  Repository
(+877 files in other folders)
