include_directories (../include) 
add_library (bf_imbuf 
allocimbuf.c amiga.c anim.c antialias.c bitplanes.c cdi.c cmap.c 
cspace.c data.c delta.c dither.c divers.c ham.c hamx.c filter.c iff.c 
iris.c izoom.c jpeg.c makecmap.c mdec_decode.c readimage.c rectop.c 
rotate.c scaling.c targa.c tiff.c tim.c troep.c util.c writeimage.c)